API de criação de lista de compras criada com a ajuda da IA para realizar os testes aprendidos na mentoria

--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/isabellahenriques/Projeto-mentoria/issues"
   },
-  "homepage": "https://github.com/isabellahenriques/Projeto-mentoria#readme"
+  "homepage": "https://github.com/isabellahenriques/Projeto-mentoria#readme",
+  "dependencies": {
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
+  }
 }
